--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,19 @@
-
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Shantellsans", sans-serif
+}
 
 body {
    
     box-shadow: 5px 5px 5px 0px rgb(9, 26, 121);
-    font-family: Verdana;
+    font-family: Verdana, sans-serif;
+    
     font-size: 1.2rem;
     line-height: 1.5;
     margin: 5% 15% 10% 5%;
@@ -15,13 +25,29 @@ body {
    
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #310c83;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 24px 50px;
+    text-decoration: none;
+
+
 .navbar {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #1f2327;
-    padding-block: 15px;
+    display:flex;
+   
 }
 
 .navbar a {
